<resources>
    <string name="app_name">SmartWG</string>
    <string name="Email">E-Mail</string>
    <string name="Password">Password</string>
    <string name="forgotPassword">Forgot your password ?</string>
    <string name="staySignedIn">Stay signed In </string>
    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="Homescreen">Homescreen</string>
    <string name="WCStatus">WCStatus</string>
    <string name="WGName">WG Name</string>
    <string name="WGBs">WGBs</string>
    <string name="Putzplan">Putzplan</string>
    <string name="ShoppingLists">Shopping</string>
    <string name="HighscoreList">Highscore</string>
    <string name="Shoppinglist">Shopping</string>
    <string name="Settings">Settings</string>
    <string name="Bath">Bathroom</string>
    <string name="Kitchen">Kitchen</string>
    <string name="ChooseRoom">Choose the room</string>
    <string name="Highscore">Highscore</string>
    <string name="Plus">+</string>
    <string name="author">Author</string>
    <string name="lastEdited">mm::hh dd::mm::yy</string>
    <string name="title">Title</string>
    <string name="SACode">SACode</string>
    <string name="Null">null</string>
    <string name="confirmChanges">Confirm Changes</string>
    <string name="nameOfUser">nameOfUser</string>
    <string name="Amount">Amount</string>
    <string name="Unit">Unit</string>
    <string name="shoppingListTitle">ShoppingListTitle</string>
</resources>