<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".HomescreenActivity">


    <TextView
        android:id="@+id/tvWCStatus"
        android:layout_width="85dp"
        android:layout_height="55dp"
        android:background="@drawable/button_background"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/WCStatus"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45" />

    <Button
        android:id="@+id/bWGB"
        android:layout_width="85dp"
        android:layout_height="55dp"
        android:background="@drawable/button_background"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/WGBs"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="115dp"
        android:layout_height="109dp"
        android:adjustViewBounds="true"
        android:cropToPadding="false"
        android:src="@drawable/ic_baseline_home_24"
        app:layout_constraintBottom_toTopOf="@+id/tvWGName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tvWGName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/WGName"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="33sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

    <Button
        android:id="@+id/bHighscoreList"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:padding="10dp"
        android:text="@string/HighscoreList"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/bSettings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWGName" />

    <Button
        android:id="@+id/bShoppingList"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:padding="10dp"
        android:text="@string/Shoppinglist"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/bSettings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWGName" />

    <Button
        android:id="@+id/bSettings"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:padding="10dp"
        android:text="@string/Settings"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWGName"
        app:layout_constraintVertical_bias="0.65" />


</androidx.constraintlayout.widget.ConstraintLayout>