<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".HomescreenActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="150dp"
                android:padding="10dp"
                android:background="@drawable/button_background"
                android:text="@string/Highscore"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:background="@drawable/button_background"
                android:text="@string/ChooseRoom"
                android:padding="10dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp">

                <Button
                    android:id="@+id/bKitchen"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/button_background"
                    android:padding="10dp"
                    android:text="@string/Kitchen"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/bBathroom"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginStart="230dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/button_background"
                    android:padding="10dp"
                    android:text="@string/Bath"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>