<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".SettingsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="70dp"
                android:padding="10dp"
                android:background="@drawable/button_background"
                android:text="@string/Settings"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:background="@drawable/back">

                <TableRow android:background="@color/white" android:padding="10dp" android:layout_width="match_parent"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="3dp">
                    <TextView
                        android:id="@+id/tvSACode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="18dp"
                        android:textColor="@color/black"
                        android:text="@string/SACode" />

                    <EditText
                        android:id="@+id/edSharedAppartmentCode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/Null" />
                </TableRow>

                <TableRow android:background="@color/white" android:padding="10dp" android:layout_width="match_parent"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="3dp">
                    <TextView
                        android:id="@+id/tvUserEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="18dp"
                        android:textColor="@color/black"
                        android:text="@string/Email" />

                    <EditText
                        android:id="@+id/edUserEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/Null" />
                </TableRow>

                <TableRow android:background="@color/white" android:padding="10dp" android:layout_width="match_parent"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="3dp">
                    <TextView
                        android:id="@+id/tvPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="18dp"
                        android:textColor="@color/black"
                        android:text="@string/Password" />

                    <EditText
                        android:id="@+id/edPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="textPassword"
                        android:gravity="center"
                        android:text="@string/Null"/>
                </TableRow>
                <TableRow android:background="@color/white" android:padding="10dp" android:layout_width="match_parent"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="3dp">
                    <TextView
                        android:id="@+id/tvWGBS"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="18dp"
                        android:textColor="@color/black"
                        android:text="@string/WGBs" />

                    <EditText
                        android:id="@+id/edWGBS"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Null"
                        android:inputType="textMultiLine"
                        android:lines="3"
                        android:minLines="1"
                        android:gravity="top|start"
                        android:maxLines="8"
                        android:scrollbars="vertical"
                        />
                </TableRow>

            </TableLayout>

            <Button
                android:id="@+id/bConfirmChanges"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_background"
                android:text="@string/confirmChanges"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>