<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <view
        android:id="@+id/ShoppingListView"
        class="androidx.cardview.widget.CardView"
        android:layout_width="278dp"
        android:layout_height="95dp"
        android:background="#00BCD4"
        app:cardBackgroundColor="#4300D4A3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13999999"/>

    <TextView
        android:id="@+id/tvAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/back"
        android:padding="3dp"
        android:text="@string/author"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/ShoppingListView"
        app:layout_constraintEnd_toEndOf="@+id/ShoppingListView"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="@+id/ShoppingListView"
        app:layout_constraintTop_toTopOf="@+id/ShoppingListView"
        app:layout_constraintVertical_bias="0.74" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/back"
        android:padding="3dp"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/tvAuthor"
        app:layout_constraintEnd_toEndOf="@+id/ShoppingListView"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="@+id/ShoppingListView"
        app:layout_constraintTop_toTopOf="@+id/ShoppingListView" />

    <TextView
        android:id="@+id/tvLastEdited"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/back"
        android:padding="3dp"
        android:text="@string/lastEdited"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/ShoppingListView"
        app:layout_constraintEnd_toEndOf="@+id/ShoppingListView"
        app:layout_constraintHorizontal_bias="0.86"
        app:layout_constraintStart_toStartOf="@+id/ShoppingListView"
        app:layout_constraintTop_toTopOf="@+id/ShoppingListView"
        app:layout_constraintVertical_bias="0.74" />

</androidx.constraintlayout.widget.ConstraintLayout>